fix production and test code to compile